# Nexa-c

./: .env.example  .env.prod.example  .env.staging.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md  bandit.yaml  docker-compose.optional.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  nexa-ui.html  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-k8s.yml  deploy-staging.yml  deploy.yml  desktop.yml  security.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  package.json
backend/ai-service/: Dockerfile  requirements.txt
backend/api-gateway/: Dockerfile  requirements.txt
backend/auth-service/: Dockerfile  requirements.txt
backend/call-service/: Dockerfile  requirements.txt
backend/chat-service/: Dockerfile  requirements.txt
backend/contact-service/: Dockerfile  requirements.txt
backend/emoji-service/: Dockerfile
backend/media-service/: Dockerfile  requirements.txt
backend/notification-service/: Dockerfile
backend/presence-service/: Dockerfile  requirements.txt
backend/shared/: pyproject.toml  requirements.txt
backend/shared/nexa_shared/: __init__.py
backend/shared/nexa_shared/cache/: __init__.py  redis_cache.py
backend/shared/nexa_shared/exceptions/: __init__.py  base.py
backend/shared/nexa_shared/features/: __init__.py  flags.py
backend/shared/nexa_shared/observability/: __init__.py  setup.py
backend/shared/nexa_shared/realtime/: __init__.py  bus.py  events.py  registry.py
backend/shared/nexa_shared/schemas/: __init__.py  common.py
backend/shared/nexa_shared/security/: __init__.py  audit.py  brute_force.py  cookies.py  csrf.py  device_fingerprint.py  field_encryption.py  jwt.py  jwt_keys.py  login_protection.py  login_risk.py  opaque_token.py  password_policy.py  passwords.py  rate_limit.py  tokens.py
backend/shared/nexa_shared/utils/: __init__.py  uid.py
backend/story-service/: Dockerfile  requirements.txt
backend/user-service/: Dockerfile
desktop/: main.js  package.json  preload.js
infrastructure/: README.md
scripts/: apply-db-migrations.sh  backup-minio.sh  backup-postgres.sh  ci-local.sh  dev-down.sh  dev-infra-up.sh  dev-up.sh  generate-jwt-keys.sh  restore-postgres.sh  run-tests.sh  server-setup.sh
tests/: conftest.py
(+577 files in other folders)
