[package]
name = "nexa-desktop"
version = "0.1.0"
description = "Nexa desktop client"
authors = ["Nexa Team"]
edition = "2021"

[lib]
name = "nexa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexa-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
